--- a/style.css
+++ b/style.css
@@ -3,30 +3,33 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: Helvetica, Arial, sans-serif;
-	color: #666;
+	font-family: 'Open Sans', Arial, sans-serif;
+	color: #333;
 	background: #f2f2f2;
 	font-size: 1em;
 	line-height: 1.5em;
-    padding-top: 80px;
+    padding-top: 67px;
 }
- 
+
 h1 {
+    font-family: 'Roboto', Arial, sans-serif;
 	font-size: 2.3em;
-	line-height: 1.3em;
-	margin: 15px 0;
+	line-height: 1.2em;
+	margin: 10px 0;
 	text-align: left;
 	font-weight: 300;
 }
 
 p {
-	margin: 0 0 1.5em 0;
+	margin: 0 0 1em 0; 
 }
- 
+
+/*
 img {
 	max-width: 100%;
 	height: auto;
 }
+*/
 
 /* --- HEADER --- */
 
@@ -47,12 +50,13 @@ img {
 
 #logo-header {
 	float: left;
-    padding: 0 20px;
+    padding: 0 23px;
     font-size: 26px;
     /*display: block;*/
     font-family: 'Lobster', cursive;
     color: yellowgreen;
     line-height: 67px;
+    transition: 0.6s;
 }
 
 #logo-header:hover {
@@ -75,6 +79,7 @@ img {
 
 nav {
 	float: right;
+    font-size: 0; /* for the space between the items */
     /*padding-right: 10px;*/
 }
 	
@@ -86,29 +91,36 @@ nav {
 	
 		nav ul li {
 			display: inline-block;
-			line-height: 67px;
+            margin: 0px 0px;
+            line-height: 67px;
 		}
 			
 			nav ul li a {
 				display: block;
 				padding: 0 10px;
 				text-decoration: none;
-                color: black;
+                color: dimgrey;
                 font-size: 16px;
                 font-family: 'Bree Serif', serif;
 			}
 			
 				nav ul li a:hover {
 					background: yellowgreen;
+                    color: white;
 				}
+
+nav ul li #navbar-item-selected {
+    background: yellowgreen;
+    color: white;
+}
 
 /* --- CONTENT --- */
 
 main {
 	background: white;
 	width: 90%;
-	max-width: 888px;
-	margin: 20px auto;
+	max-width: 1000px;
+	margin: 0 auto;
 	box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
  
@@ -122,8 +134,8 @@ main {
 	background: #333;
 	color: white;
 	text-align: center;
-	padding: 20px;
-	margin-top: 40px;
+	padding: 10px;
+    margin: 0;
 }
 	#main-footer p {
 		margin: 0;
