--- a/style.css
+++ b/style.css
@@ -51,16 +51,19 @@ img {
 #logo-header {
 	float: left;
     margin-left: 30px;
-    font-size: 26px;
     /*display: block;*/
+    line-height: 67px;
+}
+
+#logo-header-link {
+    font-size: 26px;
     font-family: 'Lobster', cursive;
     color: yellowgreen;
-    line-height: 67px;
     transition: 0.6s;
 }
 
-#logo-header:hover {
-	font-size: 26.16px;
+#logo-header-link:hover {
+	font-size: 26.2px;
 }
 
 /*
