--- a/style.css
+++ b/style.css
@@ -66,10 +66,6 @@ main #main-content {
     padding: 25px 30px;
 }
 
-main {
-    padding-bottom: 34px;
-}
-
 @media screen and (min-width: 768px) {
     body {
         background: #f2f2f2;
@@ -215,8 +211,7 @@ nav ul {
 /* --- FOOTER --- */
 
 #main-footer {
-    position: fixed;
-    width: 100%;
+    position: relative;
     bottom: 0;
 	background: #333;
 	color: white;
