--- a/style.css
+++ b/style.css
@@ -20,8 +20,6 @@ body{ }
 
 /* --- GENERAL & CONTENT --- */
 
-/*☰*/
-
 body {
 	margin: 0;
 	padding: 0;
@@ -29,6 +27,7 @@ body {
 	color: #333;
 	font-size: 1em;
 	line-height: 1.5em;
+    position: relative;
     padding-top: 67px;
 }
 
@@ -44,12 +43,12 @@ h2 {
     font-family: 'Roboto', Arial, sans-serif;
 	font-size: 1.6em;
 	line-height: 1.1em;
-    margin: 0 0 0.5em 0;
+    margin: 1em 0 0.5em 0;
 }
 
 h3 {
     font-size: 1.3em;
-    margin: 0 0 0.5em 0;
+    margin: 1em 0 0.5em 0;
 }
 
 p {
@@ -62,11 +61,46 @@ img {
     margin: 0 0 0.5em 0;
 }
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+	height: 0;
+    width: 100%;
+    margin: 0 0 0.5em 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (min-width: 630px) {
+    .video-container {
+        position: static;
+        padding-bottom: 0;
+        width: 560px;
+        height: 315px;
+    }
+
+    .video-container iframe {
+        position: static;
+        width: 560px;
+        height: 315px;
+    }
+}
+
 main #main-content {
     padding: 25px 30px;
 }
 
 @media screen and (min-width: 768px) {
+    
     body {
         background: #f2f2f2;
     }
@@ -74,7 +108,8 @@ main #main-content {
     main {
         background: white;
         width: 90%;
-        max-width: 918px;
+        max-width: 938px;
+        min-width: 858px;
         margin: 0px auto;
         box-shadow: 0 0 10px rgba(0,0,0,.1);
     }
@@ -115,6 +150,7 @@ main #main-content {
 	height: 67px;
     border-bottom: 1px solid yellowgreen;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    z-index: 111;
 }
 
 #main-header a {
